Bug Squishing

--- a/ministeria-occulta-mauroum/src/styles/global.css
+++ b/ministeria-occulta-mauroum/src/styles/global.css
@@ -19,6 +19,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
